Fix 710 - Fixed issue where talent boxes split button was hidden behind the box.

--- a/scss/components/_talent_blocks.scss
+++ b/scss/components/_talent_blocks.scss
@@ -35,7 +35,7 @@
         top: 15px;
         font-size: 15px;
         color: white;
-
+        z-index: 20;
         i {
           transform: rotate(45deg);
         }
